# vcu

./: .gitignore  README.md  requirements.txt
error-resilience/: README.md
error-resilience/burst-counter/: burstcounter.m  burstcounter.py
error-resilience/gilbert-model/: gilbertmodel.m  gilbertmodel.py
error-resilience/transmitter-simulator-avc/: CMakeLists.txt  Makefile  config_file.txt  error_plr_3  main.cpp  packet.cpp  packet.h  parameters.cpp  parameters.h  simulator.cpp  simulator.h  transmitter-simulator-avc.sln  transmitter-simulator-avc.vcxproj  transmitter-simulator-avc.vcxproj.filters
error-resilience/transmitter-simulator-avc/core/: CMakeLists.txt  core.vcxproj  core.vcxproj.filters  md5.h  packet.cpp  packet.h  parameters.cpp  parameters.h  simulator.h
error-resilience/transmitter-simulator-avc/unit-tests/: CMakeLists.txt  bitstream_annexb.264  test.cpp  unit-tests.vcxproj
error-resilience/transmitter-simulator-hevc/: CMakeLists.txt  config_file.txt  error_plr_10  error_plr_20  error_plr_5  main.cpp  packet.cpp  packet.h  parameters.cpp  parameters.h  reader.h  simulator.cpp  simulator.h  transmitter-simulator-hevc.sln  transmitter-simulator-hevc.vcxproj  transmitter-simulator-hevc.vcxproj.filters
error-resilience/transmitter-simulator-hevc/core/: CMakeLists.txt  core.vcxproj  core.vcxproj.filters  md5.cpp  packet.cpp  packet.h  parameters.cpp  parameters.h  simulator.cpp  syntax.h
error-resilience/transmitter-simulator-hevc/unit-tests/: bitstream_test.265  test.cpp  unit-tests.vcxproj
image-processing/: README.md
image-processing/edge-detection/: edgesobel.py
image-processing/ringing-addition/: addringing.m  addringing.py
image-processing/sdr-to-hdr/: 0001-SDR-to-HDR-conversion.patch  README.md  sdr2hdr.py
image-processing/spatio-temporal-index/: 0001-ITU-T-Rec.-P.910-spatial-and-temporal-information.patch  README.md  main.cpp  makefile  spatialtemporalindex.h  spatiotemporalindex.m  spatiotemporalindex.py  spatiotemporalindex.sln  spatiotemporalindex.vcxproj  spatiotemporalindex.vcxproj.filters
image-qa/: README.md  blurmetric.m  blurmetric.py  gbim.m  gbim.py  ringingmetric.m  ringingmetric.py
transform-coding/: README.md
transform-coding/dct-frame/: dctframe.m  dctframe.py
transform-coding/h264-dct/: definitions.h  forwarddct.c  forwarddct.py  inversedct.c  inversedct.py
transform-coding/h264-quarter-pel/: h264qpel.m  h264qpel.py
